--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -188,14 +188,12 @@
           var sliders = document.getElementsByClassName("ui-slider-range ui-widget-header ui-corner-all ui-slider-range-min");
           var handles = document.getElementsByClassName("ui-slider-handle ui-state-default ui-corner-all");
 
-          console.log(sliders[21].style, handles[21].style);
           for (i in controller.speaker.CurrentPreset) {   // this was "current" for some reason
             sliders[i].style.height = (controller.speaker.CurrentPreset[i] + 40) * 2 + "%";    // why does this have to be lower case
             handles[i].style.bottom = (controller.speaker.CurrentPreset[i] + 40) * 2 + "%";
             $("#text" + (parseInt(i) + 1)).val(controller.speaker.CurrentPreset[i]);
             iirConstants[i] = controller.speaker.CurrentPreset[i];
           }
-          console.log(sliders[21].style, handles[21].style);
           for (var i = 0; i < controller.speaker.CurrentMusicPreset.length; i++) {   // this was "current" for some reason
             console.log("I am here");
             sliders[i + 21].style.height = (controller.speaker.CurrentMusicPreset[i] + 40) * 2 + "%";
@@ -223,6 +221,7 @@
           //Polymer.dom.flush() idk if we need this anymore
           var equalizerListbox = document.getElementById("equalizerListbox");
           console.log(Polymer.dom(equalizerListbox).children);
+
           var motherPolymer = Polymer.dom(equalizerListbox).children; 
 
           // Remove the paper-items from the last time and the other speakers, basically throwing away the stuff that we dont need
@@ -231,9 +230,8 @@
               Polymer.dom(equalizerListbox).removeChild(motherPolymer[i]);
           }
 
-
-
           // Injecting the paper-items for the presets
+
           if(controller.speaker.PresetNames.length > 0) {
             for (i in controller.speaker.PresetNames) {
               temp = document.createElement("paper-item");
@@ -244,6 +242,30 @@
               Polymer.dom(equalizerListbox).appendChild(temp);
             }
           }
+
+
+          var musicListbox = document.getElementById("musicListbox");
+          console.log(Polymer.dom(musicListbox).children);
+          var motherPolymer = Polymer.dom(musicListbox).children; 
+
+
+          // Remove the paper-items from the last time and the other speakers, basically throwing away the stuff that we dont need
+          if(motherPolymer.length > 1) {    // change that 2 to something that is not so fragile      // dont even need to check, think of the numerical analysis of checking
+            for (var i = motherPolymer.length - 1; i > 1; i--)
+              Polymer.dom(musicListbox).removeChild(motherPolymer[i]);
+          }
+
+          if(controller.speaker.MusicPresetNames.length > 0) {
+            for (i in controller.speaker.MusicPresetNames) {
+              temp = document.createElement("paper-item");
+              temp.setAttribute("value", controller.speaker.MusicPresetNames[i].valueOf().replace("\n", ""));
+              temp.setAttribute("id", controller.speaker.MusicPresetNames[i].valueOf().replace("\n", ""));
+              // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
+              temp.innerHTML = controller.speaker.MusicPresetNames[i].valueOf().replace("\n", "");
+              Polymer.dom(musicListbox).appendChild(temp);
+            }
+          }
+
 
           //Polymer.dom.flush() idk if we need this anymore
           var targetListbox = document.getElementById("targetListbox");
