forgot to set the lastEQMode in openmapcontroller

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -204,7 +204,8 @@
 
     <paper-dialog id="switchingEQModeDialog" heading="this is a title" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal="true">
       <h2 style="text-align: center; padding-top: 24px; padding-bottom: 5px; margin: 0px;">Warning</h2>
-      <div id="eqmode" style="text-align: center; margin-top: 0px; padding: 5% 5% 5% 5%;"></div>
+      <div id="eqmode" style="text-align: center; margin-top: 0px; padding: 5% 5% 5% 5%;">
+      </div>
       <div class="butons" style="margin: 0; border-top: 1px rgba(201, 201, 201, .6) solid; padding: 5%;">
       <paper-button ondialog-confirm style="margin: 0.5em 1em 0.5em 1em;" on-click="_switchPressed">Switch</paper-button>
       <paper-button dialog-dismiss on-click="_cancelSwitchPressed">Cancel</paper-button></div>
