--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -147,10 +147,12 @@
 
         if(a.speaker.EqualizerMode == 1) {
           equalizerSelector.selected = "music";
+          lastEQMode = "music";
           musicMenu.style.visibility = "visible";
           equalizerMenu.style.visibility = "hidden";
         } else if(a.speaker.EqualizerMode == 2) {
           equalizerSelector.selected = "paging"; 
+          lastEQMode = "paging";
           //musicMenu.style.visibility = "visible";
           //equalizerMenu.style.visibility = "hidden";
           // add one for paging menu here if we need it
