--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -148,11 +148,13 @@
         if(a.speaker.EqualizerMode == 1) {
           equalizerSelector.selected = "music";
           lastEQMode = "music";
+          getValues();
           musicMenu.style.visibility = "visible";
           equalizerMenu.style.visibility = "hidden";
         } else if(a.speaker.EqualizerMode == 2) {
           equalizerSelector.selected = "paging"; 
           lastEQMode = "paging";
+          getValues();
           //musicMenu.style.visibility = "visible";
           //equalizerMenu.style.visibility = "hidden";
           // add one for paging menu here if we need it
